--- a/ccatcracker/templates/C/library.html
+++ b/ccatcracker/templates/C/library.html
@@ -33,7 +33,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="{% url 'index' %}">
+                <a href="{% url 'variables' %}">
                   <i class="fas fa-home"></i> Home</a>
               </li>
               <li class="breadcrumb-item active"> C Language</li>
@@ -48,10 +48,7 @@
           <div class="row">
             <div class="col-md-8">
              
-                <div style=" background-color: white; width: 800px;
-                border: 0.2px solid white;
-                padding: 50px;
-                margin: 20px; ">
+            
                 <h3 style="color:black">C Standard Library Functions : </h3>
 
                 <p >
@@ -107,7 +104,7 @@ The prototype and data definitions of the functions are present in their respect
                 So try to implement same above code without using any library Wright your own logic ..</h4>
 
                 <h4>Note : If you have any doubts feel free to contact us If You Didnt understand any concept ..</h4>
-            </div>
+           
             <a  style="margin-left: 60%"  href="{% url 'data_types' %}" class="btn btn-secondary text-white btn-lg">Day-3</a>
    
             </div>
