--- a/ccatcracker/templates/C/size_of.html
+++ b/ccatcracker/templates/C/size_of.html
@@ -1,5 +1,5 @@
 {% extends 'base_1.html' %}
-{% block title %} Data Types In - C | C Language Tutorial  {% endblock %}
+{% block title %} SizeOf In - C | C Language Tutorial  {% endblock %}
 
 {% block content %}
 <style>
@@ -33,8 +33,8 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="{% url 'index' %}">
-                  <i class="fas fa-home"></i> Home</a>
+                <a href="{% url 'data_types' %}">
+                 Previous</a>
               </li>
               <li class="breadcrumb-item active"> C Language</li>
             </ol>
@@ -49,10 +49,7 @@
             <div class="col-md-8">
                  
              
-                <div style=" background-color: white; width: 800px;
-                border: 0.2px solid white;
-                padding: 50px;
-                margin: 20px; ">
+             
                 <h3 style="color:black">sizeof operator in C:</h3> 
                 <p >
                         Sizeof is a much used operator in the C programming language. It is a compile time unary operator which can be used to compute the size of its operand. The result of sizeof is of unsigned integral type which is usually denoted by size_t. sizeof can be applied to any data-type, including primitive types such as integer and floating-point types, pointer types, or compound datatypes such as Structure, union etc.
@@ -134,7 +131,7 @@
 
 
              <h4>Note : If you have any doubts feel free to contact us If You Didnt understand any concept ..</h4>
-            </div>
+            
             <a  style="margin-left: 60%"  href="{% url 'modify_operator' %}" class="btn btn-secondary text-white btn-lg">Day 4-Modify-Operator</a>
    
             </div>
