--- a/ccatcracker/templates/C/variables.html
+++ b/ccatcracker/templates/C/variables.html
@@ -33,7 +33,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="{% url 'index' %}">
+                <a href="{% url 'platform' %}">
                   <i class="fas fa-home"></i> Home</a>
               </li>
               <li class="breadcrumb-item active"> C Language</li>
@@ -48,10 +48,7 @@
           <div class="row">
             <div class="col-md-8">
              
-                <div style=" background-color: white; width: 800px;
-                border: 0.2px solid white;
-                padding: 50px;
-                margin: 20px; ">
+              
                 <h3 style="color:black">Variables in C Language ?  : </h3>
 
                 <p >
@@ -133,18 +130,7 @@
                             </ul>
            
             </p>
-          
-
-
-
-
-
-
-
-
-
-
-               <h3 style="color:black">Keywords :</h3> 
+          <h3 style="color:black">Keywords :</h3> 
                <p>
                     Keywords are specific reserved words in C each of which has a specific feature associated with it. Almost all of the words which help us use the functionality of the C language are included in the list of keywords. So you can imagine that the list of keywords is not going to be a small one!
                         <br> <br>
@@ -201,7 +187,7 @@
            </p>
 
              <h4>Note : If you have any doubts feel free to contact us If You Didnt understand any concept ..</h4>
-            </div>
+           
             <a  style="margin-left: 60%"  href="{% url 'library' %}" class="btn btn-secondary text-white btn-lg">Day-2-IDE-LIBRARY</a>
    
             </div>
