--- a/ccatcracker/templates/pages/ccee.html
+++ b/ccatcracker/templates/pages/ccee.html
@@ -1,7 +1,18 @@
 {% extends 'base.html '%}
 
 {% block content %}
-
+<style>
+    p {
+      display: block;
+      margin-top: 1em;
+      margin-bottom: 1em;
+      margin-left: 0;
+      margin-right: 0;
+      font-style: italic;
+      font-size: 15px;
+      
+    }
+  </style>
       <!-- Breadcrumb -->
       <section id="bc" class="mt-3">
         <div class="container">
@@ -41,13 +52,65 @@
                 You have 40 questions and you need to pass 16 must be correct . <br>
                 If you want your score should be above 60% then you need above 25 in each paper atleast . <br>
                 There are 1000 of questions on sandfondry but really its very difficult to read them  . <br>
-                Instead do one thing just read theory concepts very weel and slides of the teachers . <br>
+                Instead do one thing just read theory concepts very well and slides of the teachers . <br>
                 Questions will not be too much difficult they just expect you know basics very well . <br>
                 So Read theory of each topic wise very very carefully and trust me guys that is more than enough . <br>
-                Also Whatever notes we have for ccee exam will update on this same website very soon . <br>
+               
                 
             </p>
+            <h3 style="color:black">Importance Of CCEE Score  : </h3> 
+            <p >
+                Hey guys I got lots of enquiries regarding CCEE exam , what this exam and how this exam matter for placement . <br>
+                and how the companies to shortlist the people as per the CCEE score . <br>
+                So I will give the all answers.  Please read all this instructions very very carefully .  <br>
+               
+                <br><br>
+                1. If your CCEE score is greater than 60 percentage then you will get maximum amount of  placement calls . <br>
+                2. Even if you have degree score is less than 60 percentage.Maximum Companies will shortlist you as CCEE score only. <br>
+                3. Some of the companies will shortlist as per degree percentage and CCEE Score . <br>
+                4. If you are the 2019 passout and CCEE score is above 60 percentage and your degree Alto above 60 percentage , <br>
+                   then for the dac students they will get daily almost 4 to 5 calls in first month of the Placement. <br>
+                5. Remember guys you have only 30 calls C-DAC will not allow  to seat in placement if you got 30 calls . <br>
+                6. So you have to must to be placed within 30 call .  <br>
+                7. Those students who cross 30 calls they will block for  campus program.  After that there is a local campus program <br>
+                   in that program that students will gets allowed.  <br>
+                8. Local campus is very very worst you will get very less amount of package almost like 2 to 3 LPA Maximum . <br>
+                9. Try to gets placed in first month of the  campus placement then you will get almost minimum 5 lpa package . <br>
+                10. No one will give you all these details guys So please be stay with us always follow our all programs you all guys will gets placed within a month . <br>
+            </p>
+            <h3 style="color:black">Types of Campus In CDAC : </h3> 
+            <p >
+               Campus is divided into three parts : <br>
+               1. On Campus (First month of campus) <br>
+               2. Off Campus (After On campus ) <br>
+               3. Local Campus <br> <br>
+               First on campus which is in the first month of the placement this will be around 1 month . <br>
+               Second  off campu  which will start  after the first month of placement means after the on campus. This campus will be around 1.5 to 2 months . <br>
+               and in this campus  package will start to decrease . <br>
+               And the last one is local campus this campus will go until the next batch. <br>
+               In the local campus you will get very very rare calls like in two three days one or two call that's it . <br>
+               And  package is also very less . <br>
+               
+               <br> <br>
+               Thats it guys these is all detail information about ccee and placements . <br>
+               You guys gets this all details before start the cdac . I got this information at the end of cdac . <br>
+               So guys you got very great chance you will get very clear guidence from us . so please tell your friend also to gets registerd with us . <br>
+               <br> <br>
+              </p>
+              <h3 style="color:black">How to get success In C-DAC : </h3> 
+              <p >
+                First and very important thing dont be lazy only 6 month hardwork will decide your future happiness . <br>
+                Ok in each batch there are some oversmart peoples so ignore then first . <br>
+                Because you are doing cdac that means you will gets placed not big deal . <br>
+                But think are you happy with 3 LPA package ? <br>
+                No , Then do some extra hard work promise your self you will never miss questions-of-the-day program . <br>
+                The benefits of that program you will realize after start placement . <br>
+                This is my gurantee if you are able to solve my questions from day 1 to last day you will 100 % crack any technical round . <br>
+                I will not give gurantee about HR that will depend on your communication ,personality etc  . <br>
+                Just be stay with us any doubt help please feel free to contact us . <br>  
+              </p>
             </div>
+            <h3 style="color:black">All The Best For Your new Journey Start From 20 Aug 2019  : </h3> 
             
             </div>
           </div>
