--- a/ccatcracker/templates/C/data_types.html
+++ b/ccatcracker/templates/C/data_types.html
@@ -33,8 +33,8 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item">
-                <a href="{% url 'index' %}">
-                  <i class="fas fa-home"></i> Home</a>
+                <a href="{% url 'library' %}">
+                  Previous </a>
               </li>
               <li class="breadcrumb-item active"> C Language</li>
             </ol>
@@ -49,10 +49,7 @@
             <div class="col-md-8">
                  
              
-                <div style=" background-color: white; width: 800px;
-                border: 0.2px solid white;
-                padding: 50px;
-                margin: 20px; ">
+               
                 <h3 style="color:black">Datatype of Variable:</h3> 
                 <p >
                         A variable in C language must be given a type, which defines what type of data the variable will hold.
@@ -136,7 +133,7 @@
 
 
              <h4>Note : If you have any doubts feel free to contact us If You Didnt understand any concept ..</h4>
-            </div>
+           
             <a  style="margin-left: 60%"  href="{% url 'size_of' %}" class="btn btn-secondary text-white btn-lg">Day 4</a>
    
             </div>
