--- a/ccatcracker/templates/cpp/array.html
+++ b/ccatcracker/templates/cpp/array.html
@@ -202,7 +202,7 @@
                 know if you have any doubts 
             </h5>
              
-            <a  style="margin-left: 60%"  href="{% url 'array-in-cpp' %}" class="btn btn-secondary text-white btn-lg">Day-5</a>
+            <a  style="margin-left: 60%"  href="{% url 'constructor-in-cpp' %}" class="btn btn-secondary text-white btn-lg">Day-5</a>
          </div>
       </div>
    </div>
